k8s/smokeping/resources/smokeping.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: lscr.io/linuxserver/smokeping@sha256:6ab8ea2fb29ea28ed546b48731177fc8f69296de0163017810e56e9428439e0e
          name: smokeping
          resources:
            requests:
              memory: 100M
            limits:
              memory: 200M
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-volume

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
