k8s/smokeping/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    gethomepage.dev/href: 'https://smokeping.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: smokeping
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: smokeping
    gethomepage.dev/name: Smokeping
spec:
  ingressClassName: internal
  rules:
    - host: &host smokeping.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
